# src/main/java/com/hairtransplant/project/controllers/LifeStyleController.java
@@ -3,6 +3,9 @@ package com.hairtransplant.project.controllers;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -14,7 +17,13 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.hairtransplant.project.entities.LifeStyle;
+import com.hairtransplant.project.entities.MedicalHistory;
+import com.hairtransplant.project.entities.PersonalInformation;
 import com.hairtransplant.project.repositories.LifeStyleRepository;
+import com.hairtransplant.project.repositories.PersonalInformationRepository;
+import com.hairtransplant.project.services.GenericExporterExcelService;
+import com.hairtransplant.project.services.LifeStyleExporterExcelService;
+import com.hairtransplant.project.services.MedicalHistoryExcelService;
 
 @RestController
 @RequestMapping("/api/lifeStyleController")
@@ -22,6 +31,8 @@ public class LifeStyleController {
 
 	@Autowired
 	LifeStyleRepository lifeStyleRepository;
+	@Autowired
+	private PersonalInformationRepository PersonalInformationRepository;
 
 	@GetMapping("search/all")
 	public List<LifeStyle> getAllLifeStyles() {
@@ -39,6 +50,9 @@ public class LifeStyleController {
 
 	@PostMapping("/save")
 	public LifeStyle createLifeStyle(@RequestBody LifeStyle lifeStyle) {
+		Long parentId = Long.parseLong(lifeStyle.getStringParent());
+		PersonalInformation personalInformation = PersonalInformationRepository.findById(parentId).orElse(null);
+		lifeStyle.setPersonalInformation(personalInformation);
 		return lifeStyleRepository.save(lifeStyle);
 	}
 
@@ -67,5 +81,37 @@ public class LifeStyleController {
 		}
 		lifeStyleRepository.delete(lifeStyle);
 		return ResponseEntity.ok().build();
+	}
+
+	@DeleteMapping("delete/all")
+	public ResponseEntity<?> deleteSelectedLifeStyles(@RequestBody List<LifeStyle> lifeStyleList) {
+
+		if (lifeStyleList.isEmpty()) {
+			return ResponseEntity.badRequest().body("List of Life Style is empty.");
+		}
+		lifeStyleRepository.deleteAll(lifeStyleList);
+		return ResponseEntity.ok().build();
+	}
+	@PostMapping("/import-excel")
+	public List<LifeStyle> importExcel(@RequestBody byte[] data) throws Exception {
+	    List<LifeStyle> l =  LifeStyleExporterExcelService.importExcelFile(data);
+	    System.out.println(l.get(0).getPersonalInformation().toString());
+	    return l;
+	}
+	
+	@PostMapping("/export-to-excel")
+	public ResponseEntity<byte[]> exportLifeStyleToExcel(@RequestBody List<LifeStyle> lifeStyleList) {
+	  try {
+	    byte[] excelBytes = LifeStyleExporterExcelService.exportLifeStyle(lifeStyleList);
+	    
+	    HttpHeaders headers = new HttpHeaders();
+	    headers.setContentType(MediaType.APPLICATION_OCTET_STREAM);
+	    headers.setContentDispositionFormData("attachment", "life-Style.xlsx");
+	    
+	    return new ResponseEntity<>(excelBytes, headers, HttpStatus.OK);
+	  } catch (Exception e) {
+	    e.printStackTrace();
+	  }
+	  return null;
 	}
 }
